# DC_2020

MPI/com.github.hronosf/: report.ipynb
MPI/com.github.hronosf/4.2/1/: VectorMaxValue.cpp  compile.sh  job.sh  report.ipynb  run.sh
MPI/com.github.hronosf/4.2/2/: VectorDotProduct.cpp  compile.sh  job.sh  report.ipynb  run.sh
MPI/com.github.hronosf/4.2/3/: MessageExchange.cpp  compile.sh  job.sh  report.ipynb  run.sh
MPI/com.github.hronosf/4.3/1/: VectorMaxValueScatter.cpp  compile.sh  job.sh  report.ipynb
MPI/com.github.hronosf/4.3/2/: VectorDotProductScatter.cpp  compile.sh  job.sh  report.ipynb
MPI/com.github.hronosf/4.3/3/: MessageExchangeRecv.cpp  compile.sh  job.sh  report.ipynb
OpenMP/: CMakeLists.txt
OpenMP/src/com.github.hronosf/: OpenMPTask.hpp  run.cpp
OpenMP/src/com.github.hronosf/1/: MinVectorElementTask.cpp  report.ipynb
OpenMP/src/com.github.hronosf/2/: VectorDotProductTask.cpp  dot_product.cpp  report.ipynb
OpenMP/src/com.github.hronosf/3/: IntergalValueTask.cpp  report.ipynb
OpenMP/src/com.github.hronosf/4/: MaxMinMatrixValue.cpp  report.ipynb
OpenMP/src/com.github.hronosf/6/: ReductionTask.cpp  report.ipynb
